updated to lastest tool and new SQL schema
